--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
 </nav>
 <!--时间卡-->
 <div class="wrap" id="wrap">
-    <ul class="tabClick">
+    <!--<ul class="tabClick">
         <li class="active">
             <div>10:00</div>
             <div>抢购中</div>
@@ -61,108 +61,13 @@
             <div>22:00</div>
             <div>即将开始</div>
         </li>
-    </ul>
-    <div class="lineBorder">
-        <div class="lineDiv"><!--移动的div--></div>
+    </ul>-->
+    <!--<div class="lineBorder">
+        <div class="lineDiv">&lt;!&ndash;移动的div&ndash;&gt;</div>
     </div>
     <div class="tabCon">
         <div class="tabBox">
-            <div id="tab1" class="tabList">
-                <div class="home-three">
-                    <a href="javascript:;" class="display-box">
-                        <div class="home-three-box">
-                            <img src="../images/11.jpg" alt="">
-                            <div class="home-three-price">
-                                <span>￥188</span>
-                                <span>￥998</span>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="javascript:;" class="display-box">
-                        <div class="home-three-box">
-                            <img src="../images/11.jpg" alt="">
-                            <div class="home-three-price">
-                                <span>￥188</span>
-                                <span>￥998</span>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="javascript:;" class="display-box">
-                        <div class="home-three-box">
-                            <img src="../images/11.jpg" alt="">
-                            <div class="home-three-price">
-                                <span >￥188</span>
-                                <span>￥998</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
 
-                <div class="home-shop-box">
-                    <img src="../images/banner1.png" alt="">
-                    <div class="home-shop-text">
-                        <span>红包20.00元</span>
-                        <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
-                    </div>
-                    <div class="home-shop-text-price">
-                        <!--优惠列-->
-                        <div class="index-shop-benefit">
-                            <p>优惠价:1008:00</p>
-                            <span>赚:31.2</span>
-                        </div>
-                        <!--销量列-->
-                        <div class="index-shop-pin">
-                            <p>销量:269</p>
-                            <span>佣金率:31.2%</span>
-                        </div>
-                        <!--立即推广按钮-->
-                        <div class="index-shop-push"><span>立即推广</span></div>
-                    </div>
-                </div>
-
-                <div class="home-shop-box">
-                    <img src="../images/banner1.png" alt="">
-                    <div class="home-shop-text">
-                        <span>红包20.00元</span>
-                        <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
-                    </div>
-                    <div class="home-shop-text-price">
-                        <!--优惠列-->
-                        <div class="index-shop-benefit">
-                            <p>优惠价:1008:00</p>
-                            <span>赚:31.2</span>
-                        </div>
-                        <!--销量列-->
-                        <div class="index-shop-pin">
-                            <p>销量:269</p>
-                            <span>佣金率:31.2%</span>
-                        </div>
-                        <!--立即推广按钮-->
-                        <div class="index-shop-push"><span>立即推广</span></div>
-                    </div>
-                </div>
-                <div class="home-shop-box">
-                    <img src="../images/banner1.png" alt="">
-                    <div class="home-shop-text">
-                        <span>红包20.00元</span>
-                        <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
-                    </div>
-                    <div class="home-shop-text-price">
-                        <!--优惠列-->
-                        <div class="index-shop-benefit">
-                            <p>优惠价:1008:00</p>
-                            <span>赚:31.2</span>
-                        </div>
-                        <!--销量列-->
-                        <div class="index-shop-pin">
-                            <p>销量:269</p>
-                            <span>佣金率:31.2%</span>
-                        </div>
-                        <!--立即推广按钮-->
-                        <div class="index-shop-push"><span>立即推广</span></div>
-                    </div>
-                </div>
-            </div>
             <div id="tab2" class="tabList">
                 2
             </div>
@@ -171,6 +76,103 @@
             </div>
             <div id="tab4" class="tabList">
                 4
+            </div>
+        </div>
+    </div>-->
+
+    <div id="tab1" class="tabList">
+        <!--<div class="home-three">
+            <a href="javascript:;" class="display-box">
+                <div class="home-three-box">
+                    <img src="../images/11.jpg" alt="">
+                    <div class="home-three-price">
+                        <span>￥188</span>
+                        <span>￥998</span>
+                    </div>
+                </div>
+            </a>
+            <a href="javascript:;" class="display-box">
+                <div class="home-three-box">
+                    <img src="../images/11.jpg" alt="">
+                    <div class="home-three-price">
+                        <span>￥188</span>
+                        <span>￥998</span>
+                    </div>
+                </div>
+            </a>
+            <a href="javascript:;" class="display-box">
+                <div class="home-three-box">
+                    <img src="../images/11.jpg" alt="">
+                    <div class="home-three-price">
+                        <span >￥188</span>
+                        <span>￥998</span>
+                    </div>
+                </div>
+            </a>
+        </div>-->
+
+        <div class="home-shop-box">
+            <img src="../images/banner1.png" alt="">
+            <div class="home-shop-text">
+                <span>红包20.00元</span>
+                <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
+            </div>
+            <div class="home-shop-text-price">
+                <!--优惠列-->
+                <div class="index-shop-benefit">
+                    <p>优惠价:1008:00</p>
+                    <span>赚:31.2</span>
+                </div>
+                <!--销量列-->
+                <div class="index-shop-pin">
+                    <p>销量:269</p>
+                    <span>佣金率:31.2%</span>
+                </div>
+                <!--立即推广按钮-->
+                <div class="index-shop-push"><span>立即推广</span></div>
+            </div>
+        </div>
+
+        <div class="home-shop-box">
+            <img src="../images/banner1.png" alt="">
+            <div class="home-shop-text">
+                <span>红包20.00元</span>
+                <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
+            </div>
+            <div class="home-shop-text-price">
+                <!--优惠列-->
+                <div class="index-shop-benefit">
+                    <p>优惠价:1008:00</p>
+                    <span>赚:31.2</span>
+                </div>
+                <!--销量列-->
+                <div class="index-shop-pin">
+                    <p>销量:269</p>
+                    <span>佣金率:31.2%</span>
+                </div>
+                <!--立即推广按钮-->
+                <div class="index-shop-push"><span>立即推广</span></div>
+            </div>
+        </div>
+        <div class="home-shop-box">
+            <img src="../images/banner1.png" alt="">
+            <div class="home-shop-text">
+                <span>红包20.00元</span>
+                <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
+            </div>
+            <div class="home-shop-text-price">
+                <!--优惠列-->
+                <div class="index-shop-benefit">
+                    <p>优惠价:1008:00</p>
+                    <span>赚:31.2</span>
+                </div>
+                <!--销量列-->
+                <div class="index-shop-pin">
+                    <p>销量:269</p>
+                    <span>佣金率:31.2%</span>
+                </div>
+                <!--立即推广按钮-->
+                <div class="index-shop-push"><span>立即推广</span></div>
             </div>
         </div>
     </div>
@@ -206,7 +208,7 @@
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
 <script src="../js/search.js"></script>
-<script src="../js/tab.js"></script>
+<!--<script src="../js/tab.js"></script>-->
 <script src="../js/aui-slide.js"></script>
 <script>
     $(document).ready(function () {
