--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -39,6 +39,7 @@
     </ul>
 
 </section>
-
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/common.js"></script>
 </body>
 </html>
