--- a/html/selected.html
+++ b/html/selected.html
@@ -22,7 +22,7 @@
         <div id="dis-list-vessel">
             <script type="text/x-handlebars-template" id="one-product">
                 {{#each products}}
-                <a href="javascript:;" class="display-box">
+                <a href="goodsDetail.html?productId={{id}}" class="display-box">
                     <div class="dis-list-box">
                         <div class="dis-shop-img">
                             <!--<img src="../img/grey.gif" data-src="{{mainImageUrl}}" alt="">-->
@@ -47,7 +47,6 @@
                                 <div class="dis-sale">
                                     <span>立即推广</span>
                                 </div>
-
                             </div>
 
                         </div>
@@ -80,9 +79,7 @@
                             <div class="dis-sale">
                                 <span>立即推广</span>
                             </div>
-
                         </div>
-
                     </div>
                 </div>
             </a>-->
