--- a/html/setup.html
+++ b/html/setup.html
@@ -36,6 +36,7 @@
     </div>
     <div class="out-login">退出登录</div>
 </nav>
-
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/common.js"></script>
 </body>
 </html>
