--- a/html/teamadmin.html
+++ b/html/teamadmin.html
@@ -37,6 +37,7 @@
         </ul>
     </div>
 </nav>
-
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/common.js"></script>
 </body>
 </html>
