--- a/html/transuccess.html
+++ b/html/transuccess.html
@@ -234,6 +234,7 @@
 </section>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
+<script src="../js/common.js"></script>
 <script>
     $(document).ready(function () {
         /*筛选按钮的切换*/
