--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/goodsdetail.css">
 </head>
 <body>
-<section style="margin-bottom: 100px">
+<section>
     <header class="aui-bar aui-bar-nav" id="aui-header">
         <div class="aui-col-xs-3 my-col-xs-3">
             <i class="aui-iconfont aui-icon-left"></i>
@@ -21,31 +21,44 @@
         <div class="aui-title my-aui-title">商品详情页</div>
     </header>
     <!--轮播图-->
-    <nav>
-        <div id="aui-slide3">
-            <div class="aui-slide-wrap" >
-                <div class="aui-slide-node bg-dark">
-                    <img src="../images/banner1.1.png" />
+    <div id="detail-content-box">
+        <script type="text/x-handlebars-template" id="detail-template">
+            {{#product}}
+            <nav>
+                <div id="aui-slide3">
+                    <div class="aui-slide-wrap" >
+                        <div class="aui-slide-node bg-dark">
+                            <img src="{{bannerImageUrls}}" alt="">
+                        </div>
+                        <!--<div class="aui-slide-node bg-dark">
+                            <img src="{{bannerImageUrls}}" alt="">
+                        </div>
+                        <div class="aui-slide-node bg-dark">
+                            <img src="{{bannerImageUrls}}" alt="">
+                        </div>-->
+                    </div>
+                    <div class="aui-slide-page-wrap"><!--分页容器--></div>
                 </div>
-                <div class="aui-slide-node bg-dark">
-                    <img src="../images/banner2.2.png" />
+            </nav>
+            <section class="goodsdetail-detail">
+                <p><span class="redpack">红包{{productHongbao}}元</span>{{name}}</p>
+                <div class="goods-detail-price">
+                    <div>
+                        <b class="goodsdetail-price">￥{{productPrice}}</b>
+                        <s class="goodsdetail-price-del">￥{{productOrginPrice}}</s>
+                    </div>
+                    <div class="now-generalize">立即推广</div>
                 </div>
-                <div class="aui-slide-node bg-dark">
-                    <img src="../images/banner3.3.png" />
+
+                <div class="goodsdetail-post">
+                    <span>{{freight isFreePost}}</span>
+                    <span>{{totalSales}}人购买</span>
                 </div>
-            </div>
-            <div class="aui-slide-page-wrap"><!--分页容器--></div>
-        </div>
-    </nav>
-    <section class="goodsdetail-detail">
-        <p><span class="redpack">红包20:00元</span>拉束带结发辣椒粉打算离开飞机上的拉束带拉束带结发辣椒粉打算离开飞机上拉束带</p>
-        <b class="goodsdetail-price">￥39.9</b>
-        <s class="goodsdetail-price-del">￥45</s>
-        <div class="goodsdetail-post">
-            <span>包邮 免运费</span>
-            <span>1965人购买</span>
-        </div>
-    </section>
+            </section>
+            {{/product}}
+        </script>
+    </div>
+
     <!--详情和评价切换-->
     <section class="goodsdetail-switch">
         <section class="goodsdetail-switch-box">
@@ -134,47 +147,49 @@
 
         </div>
     </section>
-    <footer class="goodsdetail-footer">
+    <!--<footer class="goodsdetail-footer">
         <div class="goodsdetail-footer-gwc"><img src="../images/gwc.png" alt=""></div>
         <div class="goodsdetail-footer-join"><span>加入购物车</span></div>
         <div class="goodsdetail-footer-buy"><span>立刻购买</span></div>
-    </footer>
+    </footer>-->
 
 
 </section>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
 <script src="../js/aui-slide.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/function.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/common.js"></script>
+<script src="../js/goods-detail.js"></script>
 <script>
-    $(document).ready(function () {
-        //轮播图
-        var slide3 = new auiSlide({
-            container:document.getElementById("aui-slide3"),
-            // "width":300,
-            "height":340,
-            "speed":500,
-            "autoPlay": 5000, //自动播放
-            "loop":true,
-            "pageShow":true,
-            "pageStyle":'dot',
-            'dotPosition':'center'
-        });
-        <!--详情和评价切换-->
-        $('.goodsdetail-sw-rl').click(function () {
-            $(this).addClass('goodsdetail-active1').find('.ab').addClass('goodsdetail-active');
-            $(this).siblings().removeClass('goodsdetail-active1').find('.ab').removeClass('goodsdetail-active');
-            var index=$(this).index();
-            $(".goodsdetail-con > div").eq(index).show().siblings().hide();
-        });
-//        <!--所有评价和图片评价切换-->
-        $('.goodsdetail-whole-lr').click(function () {
-            $(this).addClass('goodsdetail-active2').find('span').css('color','red');
-            $(this).siblings().removeClass('goodsdetail-active2').find('span').css('color','#1f1f1f');
-            var index1=$(this).index();
-            $('.goodsdetail-whole-con>div').eq(index1).show().siblings().hide()
-        })
+    //轮播图
+    var slide3 = new auiSlide({
+        container:document.getElementById("aui-slide3"),
+        // "width":300,
+        "height":340,
+        "speed":500,
+        "autoPlay": 5000, //自动播放
+        "loop":true,
+        "pageShow":true,
+        "pageStyle":'dot',
+        'dotPosition':'center'
+    });
+    <!--详情和评价切换-->
+    $('.goodsdetail-sw-rl').click(function () {
+        $(this).addClass('goodsdetail-active1').find('.ab').addClass('goodsdetail-active');
+        $(this).siblings().removeClass('goodsdetail-active1').find('.ab').removeClass('goodsdetail-active');
+        var index=$(this).index();
+        $(".goodsdetail-con > div").eq(index).show().siblings().hide();
+    });
+    //        <!--所有评价和图片评价切换-->
+    $('.goodsdetail-whole-lr').click(function () {
+        $(this).addClass('goodsdetail-active2').find('span').css('color','red');
+        $(this).siblings().removeClass('goodsdetail-active2').find('span').css('color','#1f1f1f');
+        var index1=$(this).index();
+        $('.goodsdetail-whole-con>div').eq(index1).show().siblings().hide()
     });
 </script>
-
 </body>
 </html>
