--- a/html/myShop.html
+++ b/html/myShop.html
@@ -13,183 +13,97 @@
 </head>
 <body>
 <section>
-    <header>
-        <img class="user-photo" src="../images/user.jpg" alt="">
-        <div class="member-info">
-            <div>小一的店铺</div>
-            <div>已经售66666件商品</div>
-            <div class="clickshare"><span>店铺分享</span></div>
-        </div>
+    <header id="header-box">
+        <script type="text/x-handlebars-template" id="mine-info-template">
+            {{#user}}
+            <img class="user-photo" src="../images/user.jpg" alt="">
+            <div class="member-info">
+                <div>{{userNickName}}</div>
+                <div>已经售66666件商品</div>
+                <div class="clickshare"><span>店铺分享</span></div>
+            </div>
+            {{/user}}
+        </script>
     </header>
     <section class="comm-box">
-        <div class="dis-select-box">
-            <select>
-                <option value="全部">全部(100)</option>
-                <option value="男装">女装(20)</option>
-                <option value="童装">童装(20)</option>
-                <option value="情侣装">情侣装(60)</option>
-            </select>
-            <select>
-                <option value="全部">默认排序</option>
-                <option value="价格由低到高">价格由低到高</option>
-                <option value="价格由高到低">价格由高到低</option>
-                <option value="销量由高到低">销量由高到低</option>
-            </select>
-            <div class="dis-screen-btn dis-screen-active">筛选</div>
-            <div class="dis-screen">
-                <div class="dis-screen-price">
-                    <div class="dis-price-section">价格区间</div>
-                    <div class="dis-screen-select">
-                        <div class="dis-low-price">最低价</div>
-                        <div class="dis-price-line"></div>
-                        <div class="dis-high-price">最高价</div>
-                    </div>
-                    <div class="dis-screen-select">
-                        <div class="dis-low-sales">最低销量</div>
-                        <div class="dis-price-line"></div>
-                        <div class="dis-high-sales">最销量</div>
-                    </div>
-                    <div class="aui-list-item-inner">
-                        <label><input class="aui-radio" checked type="radio" name="radio2"> 退货免运费</label>
+        <div class="dis-select-box" id="my-shop-box">
+            <script type="text/x-handlebars-template" id="my-select-template">
+                <select class="dis-shop-type">
+                    {{#each this}}
+                    <option value="{{id}}">{{name}}({{count}})</option>
+                    {{/each}}
+                    <!--<option value="男装">女装(20)</option>-->
+                </select>
+                <select class="dis-shop-sort">
+                    <option value="全部">默认排序</option>
+                    <option value="priceDesc">价格由低到高</option>
+                    <option value="priceAsc">价格由高到低</option>
+                    <option value="salesDesc">销量由高到低</option>
+                </select>
+                <div class="dis-screen-btn dis-screen-active">筛选</div>
+                <div class="dis-screen">
+                    <div class="dis-screen-price">
+                        <div class="dis-price-section">价格区间</div>
+                        <div class="dis-screen-select">
+                            <div class="dis-low-price">最低价</div>
+                            <div class="dis-price-line"></div>
+                            <div class="dis-high-price">最高价</div>
+                        </div>
+                        <div class="dis-screen-select">
+                            <div class="dis-low-sales">最低销量</div>
+                            <div class="dis-price-line"></div>
+                            <div class="dis-high-sales">最销量</div>
+                        </div>
+                        <div class="aui-list-item-inner">
+                            <label><input class="aui-radio" checked type="radio" name="radio2"> 退货免运费</label>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </script>
+
         </div>
         <div id="dis-list-vessel">
-            <a href="javascript:;" class="display-box">
-                <div class="dis-list-box">
-                    <div class="dis-shop-img">
-                        <img src="../images/22.jpg" alt="">
-                        <div class="earn">
-                            <span>共赚366元</span>
+            <script type="text/x-handlebars-template" id="my-shop-template">
+                {{#each products}}
+                <a href="javascript:;" class="display-box">
+                    <div class="dis-list-box">
+                        <div class="dis-shop-img">
+                            <img src="../images/22.jpg" alt="">
+                            <div class="earn">
+                                <span>共赚<span>{{profit}}</span>元</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="dis-list-content">
-                        <div class="dis-shop-detail">
-                            <span>红包20.00元</span>
-                            <span>退货免运费</span>
-                            <span>我爱北京天安门我爱北京天安门</span>
-                        </div>
-                        <div class="dis-price">
-                            <span>优惠价:108:00</span>
-                            <span>销量：269</span>
-                        </div>
-                        <div class="dis-evaluate">
-                            <span>赚:30.61元</span>
-                            <span>佣金率：28.9%</span>
-                        </div>
-                        <div class="dis-del-sale">
-                            <div class="dis-del"></div>
-                            <div class="dis-sale">
-                                <span>立即推广</span>
+                        <div class="dis-list-content">
+                            <div class="dis-shop-detail">
+                                <span>红包{{productHongbao}}元</span>
+                                <span>{{exemption isServenBack}}</span>
+                                <span>{{name}}</span>
+                            </div>
+                            <div class="dis-price">
+                                <span>优惠价:{{productPrice}}</span>
+                                <span>销量：{{totalSales}}</span>
+                            </div>
+                            <div class="dis-evaluate">
+                                <span>赚:{{marketProfit}}元</span>
+                                <span>佣金率：{{marketProfitPercent}}</span>
+                            </div>
+                            <div class="dis-del-sale">
+                                <div class="dis-del"></div>
+                                <div class="dis-sale">
+                                    <span>立即推广</span>
+                                </div>
                             </div>
 
                         </div>
-
                     </div>
-                </div>
-            </a>
-            <a href="javascript:;" class="display-box">
-                <div class="dis-list-box">
-                    <div class="dis-shop-img">
-                        <img src="../images/22.jpg" alt="">
-                        <div class="earn">
-                            <span>共赚366元</span>
-                        </div>
-                    </div>
-                    <div class="dis-list-content">
-                        <div class="dis-shop-detail">
-                            <span>红包20.00元</span>
-                            <span>退货免运费</span>
-                            <span>我爱北京天安门我爱北京天安门</span>
-                        </div>
-                        <div class="dis-price">
-                            <span>优惠价:108:00</span>
-                            <span>销量：269</span>
-                        </div>
-                        <div class="dis-evaluate">
-                            <span>赚:30.61元</span>
-                            <span>佣金率：28.9%</span>
-                        </div>
-                        <div class="dis-del-sale">
-                            <div class="dis-del"></div>
-                            <div class="dis-sale">
-                                <span>立即推广</span>
-                            </div>
+                </a>
+                {{/each}}
+            </script>
 
-                        </div>
-
-                    </div>
-                </div>
-            </a>
-            <a href="javascript:;" class="display-box">
-                <div class="dis-list-box">
-                    <div class="dis-shop-img">
-                        <img src="../images/22.jpg" alt="">
-                        <div class="earn">
-                            <span>共赚366元</span>
-                        </div>
-                    </div>
-                    <div class="dis-list-content">
-                        <div class="dis-shop-detail">
-                            <span>红包20.00元</span>
-                            <span>退货免运费</span>
-                            <span>我爱北京天安门我爱北京天安门</span>
-                        </div>
-                        <div class="dis-price">
-                            <span>优惠价:108:00</span>
-                            <span>销量：269</span>
-                        </div>
-                        <div class="dis-evaluate">
-                            <span>赚:30.61元</span>
-                            <span>佣金率：28.9%</span>
-                        </div>
-                        <div class="dis-del-sale">
-                            <div class="dis-del"></div>
-                            <div class="dis-sale">
-                                <span>立即推广</span>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-            </a>
-            <a href="javascript:;" class="display-box">
-                <div class="dis-list-box">
-                    <div class="dis-shop-img">
-                        <img src="../images/22.jpg" alt="">
-                        <div class="earn">
-                            <span>共赚366元</span>
-                        </div>
-                    </div>
-                    <div class="dis-list-content">
-                        <div class="dis-shop-detail">
-                            <span>红包20.00元</span>
-                            <span>退货免运费</span>
-                            <span>我爱北京天安门我爱北京天安门</span>
-                        </div>
-                        <div class="dis-price">
-                            <span>优惠价:108:00</span>
-                            <span>销量：269</span>
-                        </div>
-                        <div class="dis-evaluate">
-                            <span>赚:30.61元</span>
-                            <span>佣金率：28.9%</span>
-                        </div>
-                        <div class="dis-del-sale">
-                            <div class="dis-del"></div>
-                            <div class="dis-sale">
-                                <span>立即推广</span>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-            </a>
         </div>
     </section>
+    <div class="loading">加载更多...</div>
+    <div class="no-info">没有更多数据了...</div>
     <!--分享层-->
     <section class="my-share">
         <ul>
@@ -265,6 +179,12 @@
 
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/common.js"></script>
+<script src="../js/myShop.js"></script>
+
+
 <script>
     $(document).ready(function () {
         /*筛选按钮的切换*/
