--- a/html/addaddress.html
+++ b/html/addaddress.html
@@ -53,6 +53,7 @@
 <script src="../js/LAreaData2.js"></script>
 <script src="../js/LArea.min.js"></script>
 <script src="../js/config.js"></script>
+<script src="../js/common.js"></script>
 <script src="../js/addAddress.js"></script>
 </body>
 </html>
