--- a/html/bindingtel.html
+++ b/html/bindingtel.html
@@ -21,20 +21,22 @@
 <section class="bindingtel-box">
     <ul class="bindingtel-box-ul">
         <li>
-            <p>手机号</p>
-            <input type="text">
+            <p>手机号：</p>
+            <input type="text" id="nmdPhone" type="number" maxLength=11 placeholder="输入手机号">
         </li>
         <li>
-            <p>图形验证码</p>
-            <input type="text">
+            <p>图形验证码：</p>
+            <input type="text" id="code_input" value="" placeholder="输入验证">
+            <div id="v_container" style="width: 100px;height: 50px;"></div>
         </li>
         <li>
-            <p>验证码</p>
-            <input type="text">
-            <div><span>发送验证码</span></div>
+            <p>验证码：</p>
+            <input type="text" placeholder="输入验证码" id="information">
+            <!--<div class="send-information" id="send-information"><span>发送验证码</span></div>-->
+            <input type="button" id="btn" value="获取验证码" onclick="sendemail()"/>
         </li>
         <li class="bottom-border">
-            <div>
+            <div id="Determine">
                 <span>确定</span>
             </div>
         </li>
@@ -43,5 +45,8 @@
 </section>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/common.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/gVerify.js"></script>
+<script src="../js/bindingtel.js"></script>
 </body>
 </html>
