--- a/html/setup.html
+++ b/html/setup.html
@@ -19,24 +19,57 @@
     <div class="aui-title my-aui-title">设置</div>
 </header>
 <nav>
-    <div class="member-info-entry">
-        <ul class="member-info-list">
-            <li>
+    <div class="member-info-entry" id="member-info-entry">
+        <script type="text/x-handlebars-template" id="setup-template">
+            <ul class="member-info-list">
+                <li>
                 <a href="javascript:;" class="display-box">
-                    <span>当前版本</span>
-                    <span>V1.0</span>
-                </a>
+                <span>当前版本</span>
+                <span>{{data}}</span>
+            </a>
             </li>
             <li>
-                <a href="javascript:;" class="display-box">
-                    清除缓存
+            <a href="javascript:;" class="display-box">
+                清除缓存
                 </a>
-            </li>
-        </ul>
+                </li>
+                </ul>
+        </script>
+
     </div>
     <div class="out-login">退出登录</div>
 </nav>
 <script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/config.js"></script>
 <script src="../js/common.js"></script>
+<script>
+    var a=$('#setup-template').html();
+    var b=Handlebars.compile(a);
+
+
+    $.ajax({
+        url:C.marketInterface.setup,
+        type:'GET',
+        data:{
+            token:C.marketToken,
+        },
+        datatype:'json',
+        success:function (data) {
+            console.log(data)
+            if(data.result=='success'){
+                $('#member-info-entry').html(b(data))
+            }else if(data.result=='login'){
+                alert(data.errorMsg)
+            }else {
+                alert(data.errorMsg)
+            }
+        },
+        error:function () {
+            alert('服务器异常')
+        }
+    })
+
+</script>
 </body>
 </html>
