--- a/html/my.html
+++ b/html/my.html
@@ -130,29 +130,38 @@
 <script>
     var a=$('#my-template').html();
     var b=Handlebars.compile(a);
+
     $.ajax({
-        url:C.marketInterface.my,
-        type:'post',
+        url:'http://www.rrfun.com.cn/Uc/getInfo',
+        type:'GET',
         datatype:'json',
-        data:{
-            token:C.marketToken,
-        },
         success:function (data) {
-            console.log(data)
-            if(data.result=='success'){
-                var data=data.data;
-                console.log(data)
-                $('#my-box1').html(b(data));
-            }else if(data.result=='login'){
-                alert(data.errorMsg)
-            }else {
-                alert(data.errorMsg)
-            }
-        },
-        error:function () {
-            alert('服务器异常')
+            alert(data.openid);
+            //alert(data.nickname);
+            //alert(data.headimgurl);
         }
     })
+
+    /*$.ajax({
+        url:C.marketInterface.my,
+        type:'post',
+        dataType:'json',
+        data:{
+            token:C.marketToken
+        },
+        success:function (data) {
+            console.log(data);
+            if(data.result=='success'){
+                var data=data.data;
+                console.log(data);
+                $('#my-box1').html(b(data));
+            }else if(data.result=='login'){
+                alert(data.errorMsg);
+            }else {
+                alert(data.errorMsg);
+            }
+        }
+    })*/
 </script>
 </body>
 </html>
