--- a/html/transuccess.html
+++ b/html/transuccess.html
@@ -12,203 +12,27 @@
     <link rel="stylesheet" href="../css/transuccess.css">
 </head>
 <body>
+<!--头部-->
 <header class="aui-bar aui-bar-nav" id="aui-header">
     <div class="aui-col-xs-3 my-col-xs-3">
         <i class="aui-iconfont aui-icon-left"></i>
     </div>
     <div class="aui-title my-aui-title">销售管理</div>
 </header>
+<!--主体部分-->
 <section class="comm-box">
     <div class="aui-tab my-aui-tab" id="tab">
         <div class="aui-tab-item my-aui-tab-item"><a href="tranconduct.html">交易中</a></div>
-        <div class="aui-tab-item my-aui-tab-item my-aui-active"><div></div><a href="javascript:;">交易成功</a></div>
+        <div class="aui-tab-item my-aui-tab-item my-aui-active">
+            <div></div>
+            <a href="javascript:;">交易成功</a></div>
         <div class="aui-tab-item my-aui-tab-item"><a href="tranfail.html">交易失败</a></div>
     </div>
     <div id="dis-list-vessel">
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                        <div class="dis-sale">
-                            <span>交易成功</span>
-                        </div>
 
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>交易成功</span>
-                    </div>
-
-                </div>
-            </div>
-        </a>
     </div>
 </section>
+<!--我的分享-->
 <section class="my-share">
     <ul>
         <li class="my-share-li">
@@ -232,8 +56,39 @@
     </ul>
     <div class="my-share-del1"><img src="../images/del1.png" alt=""></div>
 </section>
+<script type="text/x-handlebars-template" id="transuccess-template">
+    {{#each data}}
+    <a href="goodsdetail.html?productsId={{id}}" class="display-box">
+        <div class="dis-list-box">
+            <div class="dis-shop-img">
+                <img src={{mainImageUrl}} alt="">
+            </div>
+            <div class="dis-list-content">
+                <div class="dis-shop-detail">
+                    <span>红包{{productHongbao}}元</span>
+                    <span>{{exemption isServenBack}}</span>
+                    <span>{{name}}</span>
+                </div>
+                <div class="dis-price">
+                    <span>优惠价:{{productPrice}}</span>
+                    <span>销量：{{totalSales}}</span>
+                </div>
+                <div class="dis-evaluate">
+                    <span>赚:30.61元</span>
+                    <span>佣金率：{{marketProfitPercent}}</span>
+                </div>
+                <div class="dis-sale">
+                    <span>交易成功</span>
+                </div>
+            </div>
+        </div>
+    </a>
+    {{/each}}
+</script>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/config.js"></script>
 <script src="../js/common.js"></script>
 <script>
     $(document).ready(function () {
@@ -250,6 +105,33 @@
             $('.my-share').toggle();
         });
     });
+
+    var a = $('#transuccess-template').html();
+    var b = Handlebars.compile(a);
+
+    $.ajax({
+        url: C.marketInterface.transuccess,
+        type: 'POST',
+        dataType: 'json',
+        data: {
+            token: C.marketToken,
+            orderType: '1'
+        },
+        success: function (data) {
+            if (data.result == 'success') {
+                $('#dis-list-vessel').html(b(data))
+            } else if (data.result == 'login') {
+                alert(data.errorMsg)
+            } else {
+                alert(data.errorMsg)
+            }
+        },
+        error: function () {
+            alert('服务器异常')
+        }
+    })
+
+
 </script>
 
 </body>
